<resources>
    <string name="app_name">Music Player</string>
    <string name="shuffle_btn">Вперемешку</string>
    <string name="favourites_btn">Избранное</string>
    <string name="playlist_btn">Плейлисты</string>
    <string name="total_songs">Всего аудио</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Название аудио</string>
    <string name="back_btn">Назад</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Загрузка..</string>
    <string name="repeat_btn">Повтор</string>
    <string name="equalizer_btn">Эквалайзер</string>
    <string name="timer_btn">Таймер</string>
    <string name="share_btn">Поделиться</string>
    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="app_icon">Изображение</string>
    <string name="text_nav">Меню</string>
    <string name="feedback">Отзыв</string>
    <string name="settings">Настройки</string>
    <string name="about">Информация</string>
    <string name="exit">Выход</string>
    <string name="song_album">Song Album</string>
    <string name="min_15">15 Минут</string>
    <string name="min_30">30 Минут</string>
    <string name="min_60">60 Минут</string>
    <string name="search_view">Search View</string>
    <string name="song_img">Song Image</string>
    <string name="playlist_name">Название плейлиста</string>
    <string name="playlist_delete">Удалить</string>
    <string name="user_name">Создатель плейлиста</string>
    <string name="add_song_queue">Добавить в очередь</string>
    <string name="remove_all">Удалить все</string>
    <string name="search_song">Поиск аудио</string>
    <string name="set_theme">Задать тему</string>
    <string name="sort_by">Сортировать по</string>
    <string name="version_name">Версия:</string>
    <string name="play_next">Очередь</string>
    <string name="play_next_note">Нажмите и удерживайте на аудио на главном экране.</string>
    <string name="favourite_note">Нажмите на знак сердца при воспроизведении аудио. </string>
    <string name="playlist_note">Нажмите + для создания плейлиста. </string>
    <string name="status_bar_nextsong_button">следующее аудио</string>
    <string name="status_bar_playtsong_button">воспроизвести аудио</string>
    <string name="big_player_nextsong_button">следующее аудио</string>
    <string name="big_player_backsong_button">back song</string>
    <string name="big_player_playsong_button">play song</string>
    <string name="email_label">Электронная почта</string>
    <string name="email_hint">Введите электронную почту</string>
    <string name="password_label">Пароль</string>
    <string name="password_hint">Введите пароль</string>
    <string name="login_button">Войти</string>
    <string name="login">Вход в аккаунт</string>
</resources>